# runbookforge

./: .gitignore  README.md  pyproject.toml
examples/: session.example.json
runbookforge/: __init__.py  capture.py  cli.py  distill.py  models.py  publish.py  validate.py
tests/: test_distill.py
