[project]
name = "runbookforge"
version = "0.1.0"
description = "Capture a messy build, distill the golden path, validate it on a clean env, and publish docs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0", "Jinja2>=3.1"]

[project.scripts]
rbf = "runbookforge.cli:main"

[project.optional-dependencies]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["runbookforge"]
